--- a/Validator/Validator.html
+++ b/Validator/Validator.html
@@ -46,16 +46,6 @@
         <p>Cannot display PDF. <a href="../Assets/Storm%20Nayax%20Validator%2006.pdf">Open manual.</a></p>
       </object>
         <div id="pdfPages" aria-label="Validator manual full pages" style="display:none;"></div>
-        <div id="mobilePdfControls" class="pdf-controls" style="display:none;">
-          <button id="prevPage" disabled>Prev</button>
-          <span id="pageIndicator" class="page-indicator">Page 1 / 1</span>
-          <button id="nextPage" disabled>Next</button>
-          <div class="zoom-group">
-            <button id="zoomOut" disabled>-</button>
-            <button id="zoomReset" disabled>Reset</button>
-            <button id="zoomIn" disabled>+</button>
-          </div>
-        </div>
         <div id="pdfLoading" style="display:none;text-align:center;padding:32px 0;">
           <div style="display:inline-block;width:42px;height:42px;border:4px solid #d2d2d2;border-top-color:#111;border-radius:50%;animation:spin 1s linear infinite;"></div>
         </div>
@@ -76,92 +66,35 @@
           pagesContainer.style.display='block';
           pdfjsLib.GlobalWorkerOptions.workerSrc='https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.worker.min.js';
           pdfjsLib.getDocument(pdfUrl).promise.then(doc=>{
-            let currentPage=1;
             const total=doc.numPages;
             const frame=document.querySelector('.manual-viewer__frame');
-            const controls=document.getElementById('mobilePdfControls');
-            const prevBtn=document.getElementById('prevPage');
-            const nextBtn=document.getElementById('nextPage');
-            const indicator=document.getElementById('pageIndicator');
-            const zoomOutBtn=document.getElementById('zoomOut');
-            const zoomInBtn=document.getElementById('zoomIn');
-            const zoomResetBtn=document.getElementById('zoomReset');
             const loadingEl=document.getElementById('pdfLoading');
-            controls.style.display='flex';
-            indicator.textContent='Preparing…';
-
-            const lazyMode=true;
-            if(lazyMode){
-              const pageSlots=[]; const observed=new Set(); let loadedCount=0;
-              for(let i=1;i<=total;i++){
-                const slot=document.createElement('div');
-                slot.className='pdf-page-slot';
-                slot.style.minHeight='420px';
-                slot.style.margin='0 0 28px';
-                slot.style.position='relative';
-                slot.dataset.page=i;
-                slot.innerHTML='<div class="pdf-page-loading" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:12px;color:#555;">Loading page '+i+'…</div>';
-                pagesContainer.appendChild(slot);
-                pageSlots.push(slot);
-              }
-              pagesContainer.style.padding='12px 0 60px';
-              const io=new IntersectionObserver(entries=>{
-                entries.forEach(entry=>{
-                  if(entry.isIntersecting){
-                    const slot=entry.target; const pNum=parseInt(slot.dataset.page,10);
-                    if(!observed.has(pNum)){ observed.add(pNum); renderPageLazy(pNum,slot); }
-                  }
-                });
-              },{root:frame, rootMargin:'200px 0px 200px 0px', threshold:0});
-              function computeScaleForPage(page){
-                const baseViewport=page.getViewport({scale:1});
-                const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
-                let scale=availWidth/baseViewport.width; if(scale>1.15) scale=1.15; return scale;
-              }
-              function renderPageLazy(num,slot){
-                loadingEl.style.display='block';
-                doc.getPage(num).then(page=>{
-                  const scale=computeScaleForPage(page);
-                  const viewport=page.getViewport({scale});
-                  const canvas=document.createElement('canvas');
-                  const ctx=canvas.getContext('2d');
-                  const ratio=window.devicePixelRatio||1;
-                  canvas.width=viewport.width*ratio;
-                  canvas.height=viewport.height*ratio;
-                  canvas.style.width=viewport.width+'px';
-                  canvas.style.height=viewport.height+'px';
-                  slot.innerHTML='';
-                  slot.appendChild(canvas);
-                  page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{
-                    loadedCount++;
-                    indicator.textContent=`Page ${currentPage} / ${total} (Loaded ${loadedCount})`;
-                    if(loadedCount===total){ loadingEl.style.display='none'; }
-                  });
-                }).catch(err=>{
-                  console.error('[PDF] lazy render error page',num,err);
-                  slot.querySelector('.pdf-page-loading')?.textContent='Failed to load page '+num;
-                });
-              }
-              pageSlots.forEach(s=>io.observe(s));
-              function updateControlsLazy(){
-                prevBtn.disabled=currentPage<=1;
-                nextBtn.disabled=currentPage>=total;
-                zoomOutBtn.disabled=true; zoomInBtn.disabled=true; zoomResetBtn.disabled=true;
-                indicator.textContent=`Page ${currentPage} / ${total} (Loaded ${loadedCount})`;
-              }
-              function scrollTo(num){ if(num<1||num>total) return; currentPage=num; pageSlots[num-1].scrollIntoView({behavior:'smooth',block:'start'}); updateControlsLazy(); }
-              prevBtn.addEventListener('click',()=>scrollTo(currentPage-1));
-              nextBtn.addEventListener('click',()=>scrollTo(currentPage+1));
-              pagesContainer.addEventListener('scroll',()=>{
-                const top=pagesContainer.scrollTop; let best=currentPage; let bestDelta=Infinity;
-                pageSlots.forEach((slot,i)=>{ const d=Math.abs(slot.offsetTop-top); if(d<bestDelta){ bestDelta=d; best=i+1; } });
-                if(best!==currentPage){ currentPage=best; updateControlsLazy(); }
-              });
-              updateControlsLazy();
-              console.log('[PDF] Lazy mode initialized. Total pages=', total);
-              return;
+            loadingEl.style.display='block';
+            function computeScale(page){
+              const baseViewport=page.getViewport({scale:1});
+              const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
+              let scale=availWidth/baseViewport.width; if(scale>1.15) scale=1.15; return scale;
             }
-          }).catch(err=>{ console.error('[PDFJS] Validator render fail',err); if(fallbackObj) fallbackObj.style.display='block'; pagesContainer.style.display='none'; });
+            function renderSequential(i){
+              if(i>total){ loadingEl.style.display='none'; console.log('[PDF] Validator pages rendered as images'); return; }
+              doc.getPage(i).then(page=>{
+                const scale=computeScale(page);
+                const viewport=page.getViewport({scale});
+                const canvas=document.createElement('canvas'); const ctx=canvas.getContext('2d'); const ratio=window.devicePixelRatio||1;
+                canvas.width=viewport.width*ratio; canvas.height=viewport.height*ratio; canvas.style.width=viewport.width+'px'; canvas.style.height=viewport.height+'px';
+                page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{
+                  const img=document.createElement('img');
+                  img.src=canvas.toDataURL('image/png');
+                  img.alt='Validator manual page '+i;
+                  img.style.display='block'; img.style.margin='0 auto 28px'; img.style.maxWidth='100%'; img.style.border='1px solid #e1e1e1'; img.style.borderRadius='4px'; img.style.boxShadow='0 2px 6px rgba(0,0,0,0.08)';
+                  pagesContainer.appendChild(img);
+                  canvas.width=0; canvas.height=0;
+                  requestAnimationFrame(()=>renderSequential(i+1));
+                });
+              }).catch(err=>{ console.error('[PDF] Validator page render error',i,err); requestAnimationFrame(()=>renderSequential(i+1)); });
+            }
+            renderSequential(1);
+          }).catch(err=>{ console.error('[PDFJS] Validator image render fail',err); if(fallbackObj) fallbackObj.style.display='block'; pagesContainer.style.display='none'; });
         })();
       </script>
     </div>
