--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    .back-btn{position:fixed;top:12px;left:12px;z-index:60;display:inline-block;background:#fafafa;border:1px solid #e5e5e5;padding:6px 10px;border-radius:6px;color:#111;text-decoration:none;font-weight:600;font-size:14px;line-height:1.2;min-width:74px;width:74px;text-align:center;box-shadow:none;font-family:'VCR_OSD_MONO', monospace;box-sizing:border-box}
+    .back-btn:active{transform:translateY(1px)}
+  </style>
 </head>
 <body>
   <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
+  <a href="https://www.mrmagic.com.au/" class="back-btn" aria-label="Back to Mr Magic site" rel="noopener" target="_blank">← Back</a>
   <main class="page">
 
   <!-- Card -->
